# text_search

./: 1.txt  app.py  pyproject.toml  services.py
window/: main.py
window/template/: main.py  main.ui
